--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "nes.css": "^2.3.0"
+        "nes.css": "^2.3.0",
+        "popper.js": "^1.16.1"
     }
 }
